## Day 4 总结
- 接入 DeepSeek API
- 使用 OpenAI-compatible Chat Completions 调用方式
- 新增 DeepSeekChatModelClient
- 使用 @ConditionalOnProperty 根据 ai.provider 切换模型实现
- API Key 使用环境变量 DEEPSEEK_API_KEY 管理
- ChatService 仍然只依赖 ChatModelClient 接口

## 当前模型配置

```yaml
ai:
  provider: deepseek
  base-url: https://api.deepseek.com
  api-key: ${DEEPSEEK_API_KEY}
  model: deepseek-v4-flash